@@ -1,13 +1,14 @@
+# http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DocSet
-version:      0.16
+version:      0.17
 version_from: lib/DocSet.pm
 installdirs:  site
 requires:
-    Pod::POM:                      0.15
-    Template:                      2.0
-    Storable:                      
     HTML::Parser:                  3.25
+    Pod::POM:                      0.15
+    Storable:                      
+    Template:                      2.0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.10_03
+generated_by: ExtUtils::MakeMaker version 6.17
