@@ -11,6 +11,10 @@ use vars qw(@c);
         slides
     )],
 
+    chapters => [qw(
+        abstract.txt
+    )],
+
     # non-pod/html files or dirs to be copied unmodified
     copy_glob => [qw(
         style.css
