@@ -1,6 +1,6 @@
 package DocSet;
 
-$VERSION = '0.16';
+$VERSION = '0.17';
 
 =head1 NAME
 
