@@ -2,6 +2,13 @@
 
 Changes
 
+=head1 0.17 Sat Nov 20 00:27:32 EST 2004
+
+- inherit the 'copy_skip' attribute if not set in the child
+
+- fix fetch_pdf_doc_ver not to try to copy the pdf version of the
+document to the same directory.
+
 =head1 0.16 Wed Apr 30 10:49:15 EST 2003
 
 - set $DocSet::5005compat::VERSION explicitly as previous workarounds
